# Pulsar

./: .gitignore  LICENSE  Pulsar.sln  README.md
MxHapticCursorPlugin/: MxHapticCursorPlugin.sln  README.md
MxHapticCursorPlugin/MxHapticCursorPlugin.Tests/: MxHapticCursorPlugin.Tests.csproj
MxHapticCursorPlugin/docs/: ARCHITECTURE.md  DEVELOPMENT.md
MxHapticCursorPlugin/src/: MxHapticCursorApplication.cs  MxHapticCursorPlugin.cs  MxHapticCursorPlugin.csproj
Pulsar/: README.md
Pulsar.Tests/: Pulsar.Tests.csproj
Pulsar.Tests/Device/: DeviceActivityTrackerTests.cs
Pulsar.Tests/Filtering/: CursorTypeFilterTests.cs  ThrottleFilterTests.cs
Pulsar.Tests/Haptics/: WaveformMapperTests.cs
Pulsar.Tests/Monitoring/: EventDrivenCursorMonitorTests.cs
Pulsar/docs/: DEVELOPMENT.md
Pulsar/src/: PulsarApplication.cs
docs/: ARCHITECTURE.md
docs/plans/: 2025-11-24-mx-haptic-cursor-feedback.md  2025-11-26-humming-mode-design.md
native/aubio-wrapper/: CMakeLists.txt  aubio_wrapper.c
src/: Pulsar.csproj  PulsarApplication.cs  PulsarPlugin.cs
src/Actions/: EnableToggleCommand.cs  HummingModeCommand.cs  HummingSensitivityAdjustment.cs  HummingThresholdAdjustment.cs  HummingToggleCommand.cs  MonitoringModeCommand.cs  PresetSelectorCommand.cs
src/Audio/: AubioInterop.cs  FFTAnalyzer.cs  HummingController.cs  IAudioCaptureService.cs  WasapiInterop.cs  WasapiLoopbackCaptureService.cs
src/Device/: DeviceActivityTracker.cs
src/Filtering/: CursorTypeFilter.cs  ThrottleFilter.cs
src/Haptics/: HapticController.cs  WaveformMapper.cs  WaveformType.cs
(+66 files in other folders)
